# FoggyEngine

./: .clang-format  CMakeLists.txt  Player.lua  README.md  Resources.lua  Systems.lua
Engine/: GameWorld.hpp
Engine/ActionSystem/: Action.hpp  ActionMap.hpp  ActionTarget.hpp
Engine/ActionSystem/src/: Action.cpp
Engine/AnimationSystem/: AnimatedSprite.hpp  Animation.hpp
Engine/AnimationSystem/src/: AnimatedSprite.cpp  Animation.cpp
Engine/Camera/: Camera.hpp
Engine/Camera/src/: Camera.cpp
Engine/Entity/: CircleEntity.hpp  Entity.hpp  RectangleEntity.hpp
Engine/Entity/src/: CircleEntity.cpp  Entity.cpp  RectangleEntity.cpp
Engine/EntitySystem/: Application.hpp  Component.hpp  Defines.hpp  ES.hpp  Entity.hpp  EntityManager.hpp  System.hpp
Engine/EntitySystem/Components/: Animator.hpp  Collision.hpp  Component.hpp  Controller.hpp  LuaScript.hpp  Skin.hpp  Transform.hpp
Engine/EntitySystem/Components/src/: Collision.cpp  LuaScript.cpp  Skin.cpp  Transform.cpp
Engine/EntitySystem/Entities/: Entity.hpp  EntityManager.hpp
Engine/EntitySystem/Entities/src/: Entity.cpp
Engine/EntitySystem/Systems/: CollisionSystem.hpp  SkinSystem.hpp  System.hpp
Engine/EntitySystem/Systems/src/: CollisionSystem.cpp  SkinSystem.cpp
Engine/EntitySystem/src/: Entity.cpp
Engine/GUI/: Button.hpp  Configuration.hpp  Container.hpp  Frame.hpp  HLayout.hpp  Label.hpp  Layout.hpp  Sprite.hpp  SpriteButton.hpp  TextButton.hpp  VLayout.hpp  Widget.hpp
Engine/GUI/src/: Button.cpp  Configuration.cpp  Container.cpp  Frame.cpp  HLayout.cpp  Label.cpp  Layout.cpp  Sprite.cpp  SpriteButton.cpp  TextButton.cpp  VLayout.cpp  Widget.cpp
Engine/Lua/: Handler.hpp  lunar.hpp  utils.hpp
Engine/Lua/src/: Handler.cpp
Engine/ResourceManager/: Resource.hpp  ResourceManager.hpp
Engine/ResourceManager/src/: Resource.cpp
Engine/TileMap/: Layer.hpp  Map.hpp  MapViewer.hpp  Square.hpp  Tile.hpp  VLayer.hpp  VMap.hpp
Engine/TileMap/src/: Layer.cpp  Map.cpp  MapViewer.cpp  Square.cpp  VMap.cpp
Engine/TimerSystem/: TimerSystem.hpp
Engine/TimerSystem/src/: TimerSystem.cpp
Engine/Utils/: Memory.hpp  PriorityQueue.hpp
Engine/Utils/src/: Memory.cpp
Engine/World/: World.hpp
Engine/World/src/: World.cpp
Engine/src/: GameWorld.cpp
Engine/util/: Memory.hpp  converter.hpp  fsm.hpp
Engine/util/src/: Memory.cpp
Game/: Game.hpp  HealthSystem.hpp  Player.hpp  PlayerAnimator.hpp
Game/Configuration/: Configuration.hpp
Game/Configuration/src/: Configuration.cpp
Game/Player/: Player.hpp
Game/Player/Animator/: PlayerAnimator.hpp
Game/Player/Animator/src/: PlayerAnimator.cpp
Game/Player/src/: Player.cpp
Game/Systems/: HealthSystem.hpp
Game/Systems/src/: HealthSystem.cpp
Game/src/: Game.cpp  HealthSystem.cpp  Player.cpp  main.cpp
include/: CircleEntity.hpp  Entity.hpp  Game.hpp  GameWorld.hpp  RectangleEntity.hpp
include/util/: converter.hpp
res/: map.json
res/scripts/: Animation.lua  Elf.lua  Player.lua  Resources.lua  Systems.lua  deque.lua
res/scripts/characters/: Swordsman.lua
res/scripts/libs/: enum.lua
src/: CircleEntity.cpp  Entity.cpp  Game.cpp  GameWorld.cpp  RectangleEntity.cpp  main.cpp
